--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,4 @@
 @import "./modules/section-two";
 @import "./modules/section-three";
 @import "./modules/section-four";
+@import "./modules/footer";
