--- a/src/styles/modules/_section-one.scss
+++ b/src/styles/modules/_section-one.scss
@@ -1,75 +1,79 @@
-.section-one {
-  //   border: 2px solid red;
-  max-width: var(--width-standard);
-  min-height: 521px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  color: white;
-  align-items: center;
+.landing {
+  & .section-one {
+    //   border: 2px solid red;
+    max-width: var(--width-standard);
+    min-height: 521px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color: white;
+    align-items: center;
 
-  & .left {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    padding: 70px 0;
-
-    .icons {
+    & .left {
       display: flex;
-      gap: 30px;
+      flex-direction: column;
+      gap: 40px;
+      padding: 190px 0 100px;
 
-      span {
-        height: 17px;
-        width: 17px;
-        font-size: 20px;
-        cursor: pointer;
-      }
-    }
+      .icons {
+        display: flex;
+        gap: 30px;
 
-    & h1 {
-      font-size: 3.5rem;
-      font-weight: 700;
-      text-transform: capitalize;
-      line-height: 1.3;
-    }
-
-    & p {
-      font-size: 1.25rem;
-      font-weight: 400;
-      opacity: 0.75;
-    }
-
-    & .button {
-      button {
-        padding: 12px 36px;
-        font-size: 1.15rem;
-        border: 2px solid var(--primary-blue-200);
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 10px;
-        color: var(--primary-blue-200);
-        text-transform: capitalize;
-        transition: var(--transition);
-        background: white;
-
-        &:hover {
+        span {
+          height: 17px;
+          width: 17px;
+          font-size: 20px;
           cursor: pointer;
-          background: var(--primary-blue-200);
-          color: white;
+        }
+      }
+
+      & h1 {
+        font-size: 3.5rem;
+        font-weight: 700;
+        text-transform: capitalize;
+        line-height: 1.3;
+      }
+
+      & p {
+        font-size: 1.25rem;
+        font-weight: 400;
+        opacity: 0.75;
+      }
+
+      & .button {
+        a {
+          font-size: 1.15rem;
+          border: 2px solid var(--primary-blue-200);
+          border-top-right-radius: 10px;
+          border-bottom-left-radius: 10px;
+          text-transform: capitalize;
           transition: var(--transition);
-          border-radius: 10px;
+          padding: 12px 36px;
+          color: var(--primary-blue-200);
+          background: white;
+          text-decoration: none;
+
+          &:hover {
+            cursor: pointer;
+            background: var(--primary-blue-200);
+            transition: var(--transition);
+            color: white;
+            border-radius: 10px;
+            color: white;
+          }
         }
       }
     }
-  }
 
-  & .right {
-    & .image {
-      display: flex;
-      width: 100%;
-      justify-content: flex-end;
-      & img {
-        height: 419px;
-        width: 456px;
+    & .right {
+      & .image {
+        display: flex;
+        width: 100%;
+        justify-content: flex-end;
+        & img {
+          height: 419px;
+          width: 456px;
+        }
       }
     }
   }
