--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -1,98 +1,101 @@
-.section-three {
-  min-height: 400px;
-  padding: 80px 0;
+.landing {
+  & .section-three {
+    min-height: 400px;
+    padding: 80px 0;
 
-  & .content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    max-width: var(--width-standard);
-    margin: 0 auto;
-    // border: 2px solid red;
+    & .content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      max-width: var(--width-standard);
+      margin: 0 auto;
+      // border: 2px solid red;
 
-    & .left {
-      display: flex;
-      gap: 2.5rem;
-      flex-direction: column;
-      // border: 2px solid blue;
+      & .left {
+        display: flex;
+        gap: 2.5rem;
+        flex-direction: column;
+        // border: 2px solid blue;
 
-      & h1 {
-        font-size: 3rem;
-        letter-spacing: 1.5px;
-        line-height: 1.3;
-        font-weight: 600;
-        text-transform: capitalize;
-        color: white;
-      }
-
-      & p {
-        // width: 65%;
-        font-size: 1.1rem;
-        font-weight: 400;
-        opacity: 0.75;
-        text-transform: capitalize;
-        line-height: 1.2;
-        color: white;
-      }
-
-      & .items {
-        // border: 2px solid green;
-        display: grid;
-        // justify-content: space-between;
-        grid-template-columns: 1fr 1fr;
-        // flex-wrap: wrap;
-        gap: 25px;
-
-        & .about-item {
-          display: flex;
-          gap: 20px;
-          font-size: 24px;
-          font-weight: 500;
-          color: white;
+        & h1 {
+          font-size: 3rem;
+          letter-spacing: 1.5px;
+          line-height: 1.3;
+          font-weight: 600;
           text-transform: capitalize;
-          width: 200px;
+          color: white;
+        }
 
-          & span {
-            font-size: 30px;
-            padding: 0.75rem 1rem;
-            color: var(--primary-blue);
-            background: var(--primary-blue-200);
-            border-radius: 0.25rem;
+        & p {
+          // width: 65%;
+          font-size: 1.1rem;
+          font-weight: 400;
+          opacity: 0.75;
+          text-transform: capitalize;
+          line-height: 1.2;
+          color: white;
+        }
+
+        & .items {
+          // border: 2px solid green;
+          display: grid;
+          // justify-content: space-between;
+          grid-template-columns: 1fr 1fr;
+          // flex-wrap: wrap;
+          gap: 25px;
+
+          & .about-item {
+            display: flex;
+            gap: 20px;
+            font-size: 24px;
+            font-weight: 500;
+            color: white;
+            text-transform: capitalize;
+            width: 200px;
+
+            & span {
+              font-size: 30px;
+              padding: 0.75rem 1rem;
+              color: var(--primary-blue);
+              background: var(--primary-blue-200);
+              border-radius: 0.25rem;
+            }
+          }
+        }
+
+        & a {
+          padding: 12px 36px;
+          font-size: 1.15rem;
+          border: 2px solid var(--primary-blue-200);
+          border-top-right-radius: 10px;
+          border-bottom-left-radius: 10px;
+          text-transform: capitalize;
+          transition: var(--transition);
+          width: max-content;
+          background: var(--primary-blue-200);
+          color: white;
+          text-decoration: none;
+
+          &:hover {
+            cursor: pointer;
+            color: var(--primary-blue-200);
+            background: white;
+            transition: var(--transition);
+            border-radius: 10px;
           }
         }
       }
 
-      & button {
-        padding: 12px 36px;
-        font-size: 1.15rem;
-        border: 2px solid var(--primary-blue-200);
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 10px;
-        text-transform: capitalize;
-        transition: var(--transition);
-        width: max-content;
-        background: var(--primary-blue-200);
-        color: white;
-
-        &:hover {
-          cursor: pointer;
-          color: var(--primary-blue-200);
-          background: white;
-          transition: var(--transition);
-          border-radius: 10px;
-        }
-      }
-    }
-
-    & .right {
-      display: flex;
-      align-items: center;
-      & .image {
+      & .right {
         display: flex;
-        width: 100%;
-        justify-content: flex-end;
-        & img {
-          height: 419px;
-          width: 456px;
+        align-items: center;
+        & .image {
+          display: flex;
+          width: 100%;
+          justify-content: flex-end;
+          & img {
+            height: 419px;
+            width: 456px;
+          }
         }
       }
     }
