--- a/src/styles/modules/_about.scss
+++ b/src/styles/modules/_about.scss
@@ -286,4 +286,193 @@
       }
     }
   }
+
+  & .section-four {
+    min-height: 400px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    padding: 40px 0 80px;
+
+    & .heading {
+      max-width: var(--width-standard);
+      margin: 0 auto;
+      width: 100%;
+    }
+
+    & .content {
+      //   border: 2px solid red;
+      margin: 0 auto;
+      max-width: var(--width-standard);
+      display: flex;
+      gap: 30px;
+
+      & .left {
+        display: flex;
+        flex-direction: column;
+        // gap: 50px;
+        justify-content: space-between;
+
+        & p {
+          font-size: 18px;
+          text-align: justify;
+          line-height: 24px;
+          color: black;
+          opacity: 0.85;
+          letter-spacing: 1px;
+        }
+      }
+
+      & .right {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+        & .image {
+          position: relative;
+          height: 370px;
+          width: 552px;
+
+          & img {
+            height: 370px;
+            width: 552px;
+            object-fit: cover;
+          }
+
+          &:after {
+            content: "";
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            background: rgba(21, 40, 74, 0.5);
+            top: 0;
+            left: 0;
+            z-index: 3;
+          }
+        }
+
+        & p {
+          font-size: 18px;
+          line-height: 24px;
+          color: black;
+          text-align: justify;
+          opacity: 0.85;
+          letter-spacing: 1px;
+        }
+      }
+    }
+  }
+
+  & .section-five {
+    min-height: 400px;
+    color: white;
+    max-width: var(--width-standard);
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin: 0 auto;
+
+    & p {
+      font-size: 20px;
+      line-height: 24px;
+      width: 55%;
+    }
+
+    & .content {
+      //   border: 2px solid red;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 40px;
+      grid-auto-rows: auto;
+
+      & .item {
+        // height: 200px;
+        padding: 20px;
+        border: 1px solid var(--primary-blue-200);
+        border-radius: 3px;
+        display: flex;
+        // align-items: center;
+        // justify-content: center;
+
+        & p {
+          width: 100%;
+          font-size: 17px;
+          letter-spacing: 1px;
+          line-height: 24px;
+          text-align: justify;
+        }
+      }
+    }
+  }
+
+  & .section-six {
+    // border: 2px solid red;
+    min-height: 400px;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    max-width: var(--width-standard);
+    margin: 0 auto;
+    justify-content: center;
+    color: white;
+    padding: 40px 0 100px;
+
+    & .main {
+      display: grid;
+      //   flex-direction: column;
+      grid-template-rows: auto 1fr auto auto;
+      grid-auto-rows: auto;
+      border: 1px solid var(--primary-blue-200);
+      gap: 20px;
+      padding: 20px;
+      width: 300px;
+      border-radius: 4px;
+
+      & span {
+        padding: 15px;
+        // width: 55px;
+        // height: 55px;
+        width: fit-content;
+        font-size: 50px;
+        // color: var(--primary-blue-200);
+        // color: var(--secondary-grey);
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        // background: var(--secondary-grey);
+        background: var(--primary-blue-200);
+      }
+
+      & h2 {
+        font-size: 22px;
+        font-weight: 700;
+      }
+
+      & hr {
+        width: 43px;
+        height: 2px;
+        background: var(--primary-blue-200);
+        border: none;
+      }
+
+      & .items {
+        height: 220px;
+        // border: 2px solid red;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+
+        & p {
+          font-size: 16px;
+          font-weight: 400;
+          letter-spacing: 1px;
+          //   line-height: 15px;
+        }
+      }
+    }
+  }
 }
