--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,55 @@
 @import "./modules/section-four";
 @import "./modules/footer";
 @import "./modules/about";
+@import "./modules/services";
+
+.page-header {
+  min-height: 300px;
+  // border: 2px solid red;
+  margin-top: 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  color: white;
+  background-size: cover;
+  position: relative;
+
+  &:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(21, 40, 74, 0.7);
+  }
+
+  & h1 {
+    font-weight: 700;
+    font-size: 48px;
+    z-index: 3;
+    text-transform: capitalize;
+  }
+
+  & p {
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    z-index: 3;
+  }
+
+  & a {
+    cursor: pointer;
+    color: var(--primary-blue-200);
+    transition: var(--transition);
+    text-decoration: none;
+
+    &:hover {
+      color: white;
+      transition: var(--transition);
+    }
+  }
+}
