--- a/src/styles/modules/_about.scss
+++ b/src/styles/modules/_about.scss
@@ -91,9 +91,25 @@
           display: flex;
           width: 100%;
           justify-content: flex-end;
+          position: relative;
+
+          &:before {
+            content: "";
+            position: absolute;
+            height: 419px;
+            width: 456px;
+            background: rgba(21, 40, 74, 0.55);
+            top: 0;
+            right: 0;
+            border: 5px solid var(--primary-blue-200);
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+          }
           & img {
             height: 419px;
             width: 456px;
+            border-radius: 10px;
+            object-fit: cover;
           }
         }
       }
@@ -260,8 +276,8 @@
       & .left {
         display: flex;
         flex-direction: column;
-        // gap: 50px;
-        justify-content: space-between;
+        gap: 50px;
+        // justify-content: space-between;
 
         & p {
           font-size: 18px;
@@ -350,7 +366,7 @@
           font-size: 17px;
           letter-spacing: 1px;
           line-height: 24px;
-          text-align: justify;
+          text-align: center;
         }
       }
     }
