--- a/src/styles/modules/_section-one.scss
+++ b/src/styles/modules/_section-one.scss
@@ -1,19 +1,38 @@
 .landing {
   & .section-one {
     //   border: 2px solid red;
-    max-width: var(--width-standard);
-    min-height: 521px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    color: white;
-    align-items: center;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+
+    &:before {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      background: rgba(21, 40, 74, 0.75);
+      top: 0;
+      left: 0;
+    }
+
+    & .center {
+      max-width: var(--width-standard);
+      min-height: 521px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      color: white;
+      align-items: center;
+      z-index: 3;
+    }
 
     & .left {
       display: flex;
       flex-direction: column;
       gap: 40px;
       padding: 190px 0 100px;
+      z-index: 3;
 
       .icons {
         display: flex;
@@ -66,13 +85,31 @@
     }
 
     & .right {
+      z-index: 3;
       & .image {
         display: flex;
         width: 100%;
         justify-content: flex-end;
+        position: relative;
+
+        &:before {
+          content: "";
+          position: absolute;
+          height: 439px;
+          width: 476px;
+          background: rgba(21, 40, 74, 0.55);
+          top: 0;
+          right: 0;
+          border: 5px solid var(--primary-blue-200);
+          border-top-right-radius: 10px;
+          border-bottom-left-radius: 10px;
+        }
         & img {
-          height: 419px;
-          width: 456px;
+          height: 439px;
+          width: 476px;
+          object-fit: cover;
+          border-radius: 10px;
+          // padding: 10px;
         }
       }
     }
