--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -92,9 +92,25 @@
           display: flex;
           width: 100%;
           justify-content: flex-end;
+          position: relative;
+
+          &:before {
+            content: "";
+            position: absolute;
+            height: 419px;
+            width: 456px;
+            background: rgba(21, 40, 74, 0.55);
+            top: 0;
+            right: 0;
+            border: 5px solid var(--primary-blue-200);
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+          }
           & img {
             height: 419px;
             width: 456px;
+            object-fit: cover;
+            border-radius: 10px;
           }
         }
       }
