--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import "./modules/footer";
 @import "./modules/about";
 @import "./modules/services";
+@import "./modules/business";
 
 .page-header {
   min-height: 300px;
