--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -2,6 +2,7 @@
   & .section-three {
     min-height: 400px;
     padding: 80px 0;
+    background: var(--primary-blue);
 
     & .content {
       display: grid;
