--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -110,7 +110,7 @@
           & img {
             height: 419px;
             width: 456px;
-            object-fit: cover;
+            object-fit: fill;
             border-radius: 10px;
           }
         }
