--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,9 +10,8 @@
 @import "./modules/business";
 
 .page-header {
-  min-height: 300px;
-  // border: 2px solid red;
-  margin-top: 130px;
+  min-height: 430px;
+  // margin-top: 130px;
   display: flex;
   flex-direction: column;
   align-items: center;
