--- a/src/styles/modules/_business.scss
+++ b/src/styles/modules/_business.scss
@@ -80,7 +80,7 @@
   }
 
   & .section-three {
-    max-width: var(--width-standard);
+    // max-width: var(--width-standard);
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -88,12 +88,26 @@
     // justify-content: center;
     align-items: center;
     padding: 100px 0;
+    background-size: cover;
+    position: relative;
+
+    &:before {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      right: 0;
+      background-color: rgba(21, 40, 74, 0.7);
+    }
 
     & .heading {
       width: var(--width-standard);
+      z-index: 3;
     }
 
     & .image {
+      z-index: 3;
       & img {
         height: 600px;
         width: 900px;
@@ -102,19 +116,25 @@
   }
 
   & .section-four {
-    color: white;
-    margin: 0 auto;
-    max-width: var(--width-standard);
+    background: white;
+    color: black;
     padding: 60px 0;
     display: flex;
     flex-direction: column;
     gap: 60px;
+
+    & .heading {
+      width: var(--width-standard);
+      margin: 0 auto;
+    }
 
     & .item-left,
     .item-right {
       display: flex;
       align-items: center;
       gap: 30px;
+      max-width: var(--width-standard);
+      margin: 0 auto;
 
       & .left {
         display: flex;
