--- a/src/styles/modules/_section-four.scss
+++ b/src/styles/modules/_section-four.scss
@@ -1,15 +1,21 @@
 .landing {
   & .section-four {
-    //   border: 2px solid red;
+    // border: 2px solid red;
     min-height: 400px;
-    max-width: var(--width-standard);
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
     padding: 80px 0;
     z-index: 3;
-    background: var(--primary-blue);
+    background: white;
+    z-index: 4;
+    position: relative;
+
+    & .content-center {
+      // border: 2px solid blue;
+      gap: 50px;
+      max-width: var(--width-standard);
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+    }
 
     & p {
       width: 50%;
@@ -18,7 +24,7 @@
       opacity: 0.75;
       text-transform: capitalize;
       line-height: 1.2;
-      color: white;
+      color: black;
     }
 
     & .content {
@@ -28,11 +34,11 @@
       gap: 30px;
 
       & .business-item {
-        border: 1px solid var(--primary-blue-200);
+        border: 1px solid var(--primary-blue);
         display: flex;
         flex-direction: column;
         gap: 30px;
-        color: white;
+        color: black;
         border-radius: 10px;
         padding: 20px 15px;
         position: relative;
@@ -40,14 +46,14 @@
 
         & span {
           font-size: 40px;
-          color: var(--primary-blue-200);
+          color: var(--primary-blue);
           z-index: 3;
         }
 
         & p {
           z-index: 3;
           width: 100%;
-          color: white;
+          color: black;
         }
 
         &:before {
@@ -60,7 +66,7 @@
           right: 0;
           transform: scaleX(0);
           transform-origin: right;
-          background-color: var(--primary-blue-200);
+          background-color: var(--primary-blue);
           transition: transform 0.5s ease 0s;
           // z-index: 2;
         }
