--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -3,6 +3,8 @@
     min-height: 400px;
     padding: 80px 0;
     background: var(--primary-blue);
+    z-index: 4;
+    position: relative;
 
     & .content {
       display: grid;
@@ -100,18 +102,21 @@
             position: absolute;
             height: 419px;
             width: 456px;
-            background: rgba(21, 40, 74, 0.55);
+            // background: rgba(21, 40, 74, 0.55);
             top: 0;
             right: 0;
             border: 5px solid var(--primary-blue-200);
-            border-top-right-radius: 10px;
-            border-bottom-left-radius: 10px;
+            border-radius: 0.25rem;
+            border-bottom-left-radius: 1rem;
+            border-top-right-radius: 1rem;
           }
           & img {
             height: 419px;
             width: 456px;
             object-fit: fill;
-            border-radius: 10px;
+            border-radius: 0.25rem;
+            border-bottom-left-radius: 1rem;
+            border-top-right-radius: 1rem;
           }
         }
       }
