--- a/src/styles/modules/_section-two.scss
+++ b/src/styles/modules/_section-two.scss
@@ -2,6 +2,8 @@
   & .section-two {
     min-height: 500px;
     background: white;
+    z-index: 4;
+    position: relative;
 
     & .content {
       max-width: var(--width-standard);
