--- a/src/styles/modules/_navbar.scss
+++ b/src/styles/modules/_navbar.scss
@@ -61,5 +61,6 @@
 }
 
 .navbar-scrolled {
-  background: var(--primary-blue-200);
+  // background: var(--primary-blue-200);
+  background: rgb(42, 111, 201);
 }
