--- a/src/styles/modules/_about.scss
+++ b/src/styles/modules/_about.scss
@@ -2,6 +2,7 @@
   .section-two {
     min-height: 400px;
     padding: 80px 0;
+    background: white;
 
     & .content {
       display: grid;
@@ -22,7 +23,7 @@
           line-height: 1.3;
           font-weight: 600;
           text-transform: capitalize;
-          color: white;
+          color: black;
         }
 
         & p {
@@ -32,15 +33,12 @@
           opacity: 0.75;
           text-transform: capitalize;
           line-height: 1.2;
-          color: white;
+          color: black;
         }
 
         & .items {
-          // border: 2px solid green;
           display: grid;
-          // justify-content: space-between;
           grid-template-columns: 1fr 1fr;
-          // flex-wrap: wrap;
           gap: 25px;
 
           & .about-item {
@@ -48,7 +46,7 @@
             gap: 20px;
             font-size: 24px;
             font-weight: 500;
-            color: white;
+            color: black;
             text-transform: capitalize;
             width: 200px;
 
@@ -98,17 +96,20 @@
             position: absolute;
             height: 419px;
             width: 456px;
-            background: rgba(21, 40, 74, 0.55);
+            // background: rgba(21, 40, 74, 0.55);
             top: 0;
             right: 0;
             border: 5px solid var(--primary-blue-200);
-            border-top-right-radius: 10px;
-            border-bottom-left-radius: 10px;
+            border-radius: 0.25rem;
+            border-bottom-left-radius: 1rem;
+            border-top-right-radius: 1rem;
           }
           & img {
             height: 419px;
             width: 456px;
-            border-radius: 10px;
+            border-radius: 0.25rem;
+            border-bottom-left-radius: 1rem;
+            border-top-right-radius: 1rem;
             object-fit: fill;
           }
         }
@@ -120,9 +121,11 @@
     min-height: 400px;
     background: white;
     padding: 100px 0;
+    background: var(--primary-blue);
+    color: white;
 
     & .content {
-      //   border: 2px solid red;
+      // border: 2px solid red;
       display: flex;
       max-width: var(--width-standard);
       margin: 0 auto;
@@ -214,7 +217,7 @@
               width: 80px;
               height: 80px;
               border-radius: 100%;
-              box-shadow: 0 10px 10px 0px rgb(167 174 189 / 40%);
+              box-shadow: 0 10px 10px 0px rgba(37, 37, 37, 0.4);
               background: white;
               display: flex;
               align-items: center;
@@ -259,6 +262,7 @@
     flex-direction: column;
     gap: 60px;
     padding: 40px 0 80px;
+    background: var(--padding-blue);
 
     & .heading {
       max-width: var(--width-standard);
@@ -283,7 +287,7 @@
           font-size: 18px;
           text-align: justify;
           line-height: 24px;
-          color: black;
+          color: white;
           opacity: 0.85;
           letter-spacing: 1px;
         }
@@ -331,13 +335,18 @@
 
   & .section-five {
     min-height: 400px;
-    color: white;
-    max-width: var(--width-standard);
-    padding: 100px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    margin: 0 auto;
+    color: black;
+
+    background: white;
+
+    & .content-center {
+      max-width: var(--width-standard);
+      padding: 100px 0;
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+      margin: 0 auto;
+    }
 
     & p {
       font-size: 20px;
@@ -346,7 +355,7 @@
     }
 
     & .content {
-      //   border: 2px solid red;
+      // border: 2px solid red;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 40px;
@@ -355,7 +364,7 @@
       & .item {
         // height: 200px;
         padding: 20px;
-        border: 1px solid var(--primary-blue-200);
+        border: 1px solid var(--primary-blue);
         border-radius: 3px;
         display: flex;
         // align-items: center;
