--- a/src/styles/modules/_business.scss
+++ b/src/styles/modules/_business.scss
@@ -2,13 +2,17 @@
   & .section-two {
     //   border: 2px solid red;
     min-height: 400px;
-    max-width: var(--width-standard);
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
     padding: 80px 0;
     z-index: 3;
+    background: white;
+
+    & .content-center {
+      max-width: var(--width-standard);
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+    }
 
     & p {
       width: 50%;
@@ -17,7 +21,7 @@
       opacity: 0.75;
       text-transform: capitalize;
       line-height: 1.2;
-      color: white;
+      color: black;
     }
 
     & .content {
@@ -27,11 +31,11 @@
       gap: 30px;
 
       & .business-item {
-        border: 1px solid var(--primary-blue-200);
+        border: 1px solid var(--primary-blue);
         display: flex;
         flex-direction: column;
         gap: 30px;
-        color: white;
+        color: black;
         border-radius: 10px;
         padding: 20px 15px;
         position: relative;
@@ -39,14 +43,14 @@
 
         & span {
           font-size: 40px;
-          color: var(--primary-blue-200);
+          color: var(--primary-blue);
           z-index: 3;
         }
 
         & p {
           z-index: 3;
           width: 100%;
-          color: white;
+          color: black;
         }
 
         &:before {
@@ -59,7 +63,7 @@
           right: 0;
           transform: scaleX(0);
           transform-origin: right;
-          background-color: var(--primary-blue-200);
+          background-color: var(--primary-blue);
           transition: transform 0.5s ease 0s;
           // z-index: 2;
         }
