--- a/src/styles/modules/_services.scss
+++ b/src/styles/modules/_services.scss
@@ -91,11 +91,12 @@
           // border: 1px solid var(--primary-blue);
           color: black;
           display: flex;
+          // grid-template-columns: auto 1fr;
           gap: 1.5rem;
           flex-direction: row;
           height: fit-content;
-          justify-content: center;
-          gap: 190px;
+          justify-content: space-between;
+          // gap: 190px;
           align-items: center;
           padding: 25px 0px;
           min-height: 330px;
@@ -105,13 +106,15 @@
           .icon {
             padding: 0;
             font-size: 408px;
-            color: var(--primary-blue);
-            // color: white;
+            // color: var(--primary-blue);
+            color: white;
+            background: var(--primary-blue);
             z-index: 3;
             transition: var(--transition-ease);
             width: 408px;
             height: 408px;
             // border: 2px solid red;
+            border-radius: 10px;
           }
 
           h2 {
@@ -132,7 +135,7 @@
             // justify-content: space-between;
             gap: 30px;
             z-index: 3;
-            width: 408px;
+            width: 55%;
           }
 
           ul {
@@ -148,6 +151,14 @@
               color: black;
               transition: var(--transition-ease);
             }
+          }
+
+          & p {
+            color: black;
+            font-size: 1.1rem;
+            line-height: 1.5;
+            z-index: 3;
+            text-align: justify;
           }
 
           button {
@@ -220,6 +231,7 @@
         }
         & .reversed {
           flex-direction: row-reverse;
+          // grid-template-columns: auto 1fr;
         }
       }
     }
