resources in progress...

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import "./modules/about";
 @import "./modules/services";
 @import "./modules/business";
+@import "./modules/resources";
 
 .page-header {
   min-height: 430px;
