--- a/src/styles/modules/_resources.scss
+++ b/src/styles/modules/_resources.scss
@@ -82,6 +82,7 @@
             color: rgb(162, 162, 162);
             padding: 20px;
             cursor: pointer;
+            text-decoration: none;
 
             & span {
               font-size: 20px;
@@ -141,7 +142,7 @@
             gap: 40px;
 
             & .item {
-              padding: 50px 40px;
+              padding: 50px 20px;
               background: white;
               border-radius: 25px;
               display: flex;
