--- a/src/styles/modules/_resources.scss
+++ b/src/styles/modules/_resources.scss
@@ -142,7 +142,7 @@
             gap: 40px;
 
             & .item {
-              padding: 50px 20px;
+              padding: 70px 20px 50px;
               background: white;
               border-radius: 25px;
               display: flex;
@@ -153,10 +153,19 @@
 
               & span {
                 position: absolute;
-                top: -13px;
+                top: -18px;
                 left: 40px;
                 font-size: 42px;
-                color: var(--primary-blue);
+                background: var(--primary-blue);
+                color: white;
+
+                box-shadow: 1px 2px 10px 2px rgb(198, 194, 194);
+                border-radius: 50%;
+                width: 65px;
+                height: 65px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
               }
 
               & h2 {
