--- a/src/styles/modules/_navbar.scss
+++ b/src/styles/modules/_navbar.scss
@@ -21,9 +21,9 @@
     align-items: center;
 
     & img {
-      height: 70px;
-      width: 180px;
-      background: white;
+      height: 60px;
+      width: 200px;
+      // background: white;
       padding: 5px 10px;
       box-sizing: content-box;
     }
