--- a/src/styles/modules/_section-two.scss
+++ b/src/styles/modules/_section-two.scss
@@ -82,7 +82,7 @@
         flex-wrap: wrap;
         gap: 40px;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
 
         .service-item {
           width: 350px;
