--- a/src/styles/modules/_footer.scss
+++ b/src/styles/modules/_footer.scss
@@ -40,7 +40,7 @@ footer {
     & img {
       width: 160px;
       height: 60px;
-      background: white;
+      // background: white;
       padding: 10px;
     }
 
