--- a/src/styles/modules/_landing.scss
+++ b/src/styles/modules/_landing.scss
@@ -8,6 +8,13 @@
   width: max-content;
   color: var(--primary-blue-200);
 
+  @media (max-width: $breakpoint-large) {
+    font-size: 0.8rem;
+  }
+  @media (max-width: $breakpoint-tablet) {
+    font-size: 0.6rem;
+  }
+
   &:before,
   &:after {
     content: "";
@@ -19,6 +26,13 @@
     top: 50%;
     translate: 0 -50%;
     background-color: var(--primary-blue-200);
+
+    @media (max-width: $breakpoint-large) {
+      width: 5px;
+    }
+    @media (max-width: $breakpoint-tablet) {
+      width: 4px;
+    }
   }
   &:before {
     left: 0;
