--- a/src/styles/modules/_section-one.scss
+++ b/src/styles/modules/_section-one.scss
@@ -9,6 +9,7 @@
     position: relative;
     z-index: 1;
     min-height: 100vh;
+    padding: 0 40px;
 
     // backgroun
 
@@ -37,6 +38,12 @@
       color: white;
       align-items: center;
       z-index: 3;
+
+      @media (max-width: $breakpoint-tablet) {
+      }
+      @media (max-width: $breakpoint-large) {
+        grid-template-columns: 1fr;
+      }
     }
 
     & .left {
@@ -45,6 +52,11 @@
       gap: 40px;
       padding: 190px 0 100px;
       z-index: 3;
+      // border: 2px solid red;
+
+      @media (max-width: $breakpoint-large) {
+        // width: 100%;
+      }
 
       .icons {
         display: flex;
@@ -55,6 +67,17 @@
           width: 17px;
           font-size: 20px;
           cursor: pointer;
+
+          @media (max-width: $breakpoint-large) {
+            height: 15px;
+            width: 15px;
+            font-size: 17px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            height: 12px;
+            width: 12px;
+            font-size: 14px;
+          }
         }
       }
 
@@ -64,6 +87,13 @@
         text-transform: capitalize;
         line-height: 1.3;
         position: relative;
+
+        @media (max-width: $breakpoint-large) {
+          font-size: 3rem;
+        }
+        @media (max-width: $breakpoint-tablet) {
+          font-size: 2.5rem;
+        }
 
         & span {
           color: var(--primary-blue-200);
@@ -96,6 +126,13 @@
         font-size: 1.25rem;
         font-weight: 400;
         opacity: 0.75;
+
+        @media (max-width: $breakpoint-large) {
+          font-size: 1rem;
+        }
+        @media (max-width: $breakpoint-tablet) {
+          font-size: 0.8rem;
+        }
       }
 
       & .button {
@@ -116,6 +153,15 @@
           z-index: 3;
           position: relative;
 
+          @media (max-width: $breakpoint-large) {
+            font-size: 1rem;
+            padding: 10px 30px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 0.8rem;
+            padding: 8px 25px;
+          }
+
           &:hover {
             cursor: pointer;
             background: var(--primary-blue-200);
@@ -129,6 +175,9 @@
 
     & .right {
       z-index: 3;
+      @media (max-width: $breakpoint-large) {
+        display: none;
+      }
       & .image {
         display: flex;
         width: 100%;
