--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -1,7 +1,7 @@
 .landing {
   & .section-three {
     min-height: 400px;
-    padding: 80px 0;
+    padding: 80px 40px;
     background: var(--primary-blue);
     z-index: 4;
     position: relative;
@@ -12,6 +12,11 @@
       max-width: var(--width-standard);
       margin: 0 auto;
       // border: 2px solid red;
+
+      @media (max-width: $breakpoint-large) {
+        // display: none;
+        grid-template-columns: 1fr;
+      }
 
       & .left {
         display: flex;
@@ -26,6 +31,18 @@
           font-weight: 600;
           text-transform: capitalize;
           color: white;
+          // border: 2px solid red;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 2.7rem;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            width: 80%;
+            font-size: 2.4rem;
+          }
+          @media (max-width: $breakpoint-mobile) {
+            font-size: 2rem;
+          }
         }
 
         & p {
@@ -36,6 +53,14 @@
           text-transform: capitalize;
           line-height: 1.2;
           color: white;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 0.9rem;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            width: 80%;
+            font-size: 0.7rem;
+          }
         }
 
         & .items {
@@ -47,20 +72,45 @@
           gap: 25px;
 
           & .about-item {
-            display: flex;
-            gap: 20px;
-            font-size: 24px;
-            font-weight: 500;
-            color: white;
-            text-transform: capitalize;
-            width: 200px;
+            & p {
+              display: flex;
+              gap: 20px;
+              font-size: 24px;
+              font-weight: 500;
+              color: white;
+              text-transform: capitalize;
+              width: 200px;
 
-            & span {
-              font-size: 30px;
-              padding: 0.75rem 1rem;
-              color: var(--primary-blue);
-              background: var(--primary-blue-200);
-              border-radius: 0.25rem;
+              @media (max-width: $breakpoint-large) {
+                width: 180px;
+                font-size: 20px;
+              }
+              @media (max-width: $breakpoint-tablet) {
+                font-size: 18px;
+                width: 160px;
+              }
+              @media (max-width: $breakpoint-mobile) {
+                font-size: 17px;
+                width: 140px;
+              }
+
+              & span {
+                font-size: 30px;
+                padding: 0.75rem 1rem;
+                color: var(--primary-blue);
+                background: var(--primary-blue-200);
+                border-radius: 0.25rem;
+
+                @media (max-width: $breakpoint-large) {
+                  font-size: 25px;
+                }
+                @media (max-width: $breakpoint-tablet) {
+                  font-size: 20px;
+                }
+                @media (max-width: $breakpoint-mobile) {
+                  font-size: 18px;
+                }
+              }
             }
           }
         }
@@ -78,6 +128,15 @@
           color: white;
           text-decoration: none;
 
+          @media (max-width: $breakpoint-large) {
+            font-size: 0.9rem;
+            padding: 10px 30px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 0.7rem;
+            padding: 8px 24px;
+          }
+
           &:hover {
             cursor: pointer;
             color: var(--primary-blue-200);
@@ -91,6 +150,10 @@
       & .right {
         display: flex;
         align-items: center;
+
+        @media (max-width: $breakpoint-large) {
+          display: none;
+        }
         & .image {
           display: flex;
           width: 100%;
