--- a/src/styles/modules/_section-two.scss
+++ b/src/styles/modules/_section-two.scss
@@ -4,6 +4,7 @@
     background: white;
     z-index: 4;
     position: relative;
+    padding: 0 40px;
 
     & .content {
       max-width: var(--width-standard);
@@ -20,10 +21,17 @@
         justify-content: space-between;
         align-items: center;
 
+        @media (max-width: $breakpoint-tablet) {
+          display: grid;
+          grid-template-columns: 1fr;
+          gap: 30px;
+        }
+
         & .left {
           display: flex;
           gap: 1.5rem;
           flex-direction: column;
+          // border: 2px solid red;
 
           & h1 {
             font-size: 3rem;
@@ -33,6 +41,13 @@
             text-transform: capitalize;
             color: var(--primary-blue);
             // color: black;
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 2.5rem;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 2rem;
+            }
           }
 
           & p {
@@ -45,6 +60,13 @@
             line-height: 1.2;
             color: black;
             // text-align: justify;
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 0.9rem;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 0.7rem;
+            }
           }
         }
         .right {
@@ -63,6 +85,15 @@
             gap: 10px;
             color: var(--primary-blue);
             text-decoration: none;
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 0.9rem;
+              padding: 10px 30px;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 0.7rem;
+              padding: 8px 25px;
+            }
 
             &:hover {
               cursor: pointer;
@@ -91,17 +122,27 @@
           display: flex;
           gap: 1.5rem;
           flex-direction: column;
-          height: fit-content;
           padding: 25px 20px;
           height: 330px;
           position: relative;
           transition: var(--transition-ease);
+
+          @media (max-width: $breakpoint-tablet) {
+            height: auto;
+          }
 
           .icon {
             font-size: 48px;
             color: var(--primary-blue);
             z-index: 3;
             transition: var(--transition-ease);
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 42px;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 36px;
+            }
           }
 
           h2 {
@@ -111,6 +152,13 @@
             color: var(--primary-blue);
             z-index: 3;
             transition: var(--transition-ease);
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 1.3rem;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 1rem;
+            }
           }
 
           .service-content {
@@ -119,6 +167,10 @@
             height: 100%;
             justify-content: space-between;
             z-index: 3;
+
+            @media (max-width: $breakpoint-tablet) {
+              gap: 1rem;
+            }
           }
 
           ul {
@@ -127,6 +179,13 @@
             line-height: 1.5;
             // opacity: 0.85;
             z-index: 3;
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 0.9rem;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 0.7rem;
+            }
 
             li {
               text-transform: capitalize;
