--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,7 @@
   color: white;
   background-size: cover;
   position: relative;
+  // border: 2px solid red;
 
   &:before {
     content: "";
@@ -38,6 +39,13 @@
     font-size: 48px;
     z-index: 3;
     text-transform: capitalize;
+
+    @media (max-width: $breakpoint-large) {
+      font-size: 45px;
+    }
+    @media (max-width: $breakpoint-tablet) {
+      font-size: 40px;
+    }
   }
 
   & p {
@@ -46,6 +54,13 @@
     letter-spacing: 1px;
     text-transform: capitalize;
     z-index: 3;
+
+    @media (max-width: $breakpoint-large) {
+      font-size: 14px;
+    }
+    @media (max-width: $breakpoint-tablet) {
+      font-size: 12px;
+    }
   }
 
   & a {
